# vibeguadian

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  cargo-docker  docker-compose.yml
.claude/: settings.json
.claude/skills/design-review/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
demo/: README.md  app.py  echo_server.py  setup.sh  vibeguard.toml
docs/: cli.md  design.md  release.md
src/: cli.rs  main.rs  mask.rs
src/commands/: init.rs  mod.rs  run.rs  set.rs  status.rs
src/config/: mod.rs  project.rs  resolver.rs  secrets.rs
src/proxy/: handler.rs  mod.rs
