[package]
name = "vs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vs"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP proxy
axum = "0.8"
reqwest = { version = "0.13", features = ["stream"] }
http = "1"

# Log masking
aho-corasick = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Utilities
anyhow = "1"
rpassword = "7"
dirs = "5"
tokio-util = { version = "0.7", features = ["io"] }
